# not-cors

./: run.sh
demo/: Cargo.toml
demo/src/: main.rs
demo/static/: index.html
drawio/: .$cors_nocors.drawio.bkp  .$cors_with_cors.drawio.bkp  .$nocors_evil.drawio.bkp  cors_nocors.drawio  cors_with_cors.drawio  cors_with_cors_2.drawio  nocors_evil.drawio  nocors_evil2.drawio
slides/: .gitignore  01-about-cors.adoc  02-demo.adoc  03-conclusion.adoc  04-Fin.adoc  index.adoc  index.html  run.sh  unused.adoc
slides/css/: custom.css
slides/pictures/: .$cors_with_cors_2.drawio.png.bkp
